# static_pool

./: CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
src/: static_pool.c  static_pool.h
test/: test_static_pool.c
